@@ -58,7 +58,7 @@
 		<property name="description" i18n:translate=""></property>
 		<property name="url_expr">string:@@dossier_report:method</property>
         <property name="icon_expr"></property>
-		<property name="available_expr">python:context.restrictedTraverse('reporting_controller')()</property>
+		<property name="available_expr"></property>
 		<property name="permissions">
 			<element value="View"/>
       	</property>
