@@ -1,0 +1,20 @@
+<?xml version="1.0"?>
+<object name="portal_actions" meta_type="Plone Actions Tool"
+        xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+        i18n:domain="opengever.dossier">
+  <object name="folder_buttons" meta_type="CMF Action Category">
+
+	  <object name="export_dossiers" meta_type="CMF Action" i18n:domain="opengever.dossier">
+		  <property name="title" i18n:translate="">Export selection</property>
+		  <property name="description" i18n:translate=""></property>
+		  <property name="url_expr">string:@@dossier_report:method</property>
+      <property name="icon_expr"></property>
+		  <property name="available_expr"></property>
+		  <property name="permissions">
+			  <element value="View"/>
+      </property>
+		  <property name="visible">True</property>
+	  </object>
+
+  </object>
+</object>
