@@ -4,18 +4,6 @@
 
   <object name="folder_buttons" meta_type="CMF Action Category">
 
-    <object name="clear_and_rebuild_tasks" meta_type="CMF Action"
-            i18n:domain="opengever.task">
-      <property name="title" i18n:translate="">Clear and rebuild tasks</property>
-      <property name="description" i18n:translate=""></property>
-      <property name="url_expr">string:clear-and-rebuild-tasks:method</property>
-      <property name="icon_expr"></property>
-      <property name="available_expr"></property>
-      <property name="permissions">
-        <element value="View"/>
-      </property>
-      <property name="visible">True</property>
-    </object>
     <object name="export_tasks" meta_type="CMF Action" i18n:domain="opengever.globalindex">
       <property name="title" i18n:translate="">Export selection</property>
       <property name="description" i18n:translate=""></property>
@@ -27,5 +15,7 @@
       </property>
       <property name="visible">True</property>
     </object>
+
   </object>
+
 </object>
